# the-organic

./: .gitignore  README.md  build-repo-manager.sh  init.sh  khadim  package-bkup.json  package-lock.json  package-tmpl.json  package.json  tmngr
.config/: dotnet-tools.json
.github/workflows/: build-and-unit-test.yml  build-and-unit-tests.yml  ci.yml  e2e-tests.yml
.husky/: pre-commit  pre-push
apps/ayokoding-web/: README.md  jest.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.json
deprecated/khadim-rs/: Cargo.toml  README.md
deprecated/khadim-rs/src/: dependencies.rs  doctor.rs  init.rs  lib.rs  reset.rs
libs/hello/: README.md  (+3 more)
mngr/: Cargo.toml  Commands.fs  Config.fs  Program.fs  README.md  Tools.fs  Types.fs  Utils.fs  config.json  mngr.fsproj
mngr-rs/: Cargo.toml
mngr/Commands/: Clean.fs  Doctor.fs  Help.fs  Initialize.fs  Reset.fs
mngr/Domains/: CLI.fs  Repo.fs  Terminal.fs  Tooling.fs
mngr/Domains/CLI/: Menu.fs  Options.fs
mngr/Domains/CLI/Commands/: Clean.fs  Help.fs  Initialize.fs  Reset.fs
mngr/Domains/PackageManager/: NPM.fs  Project.fs  ProjectKind.fs
mngr/PackageManager/: NPM.fs  ProjectKind.fs
mngr/Utils/: Commons.fs  Spinner.fs
mngr/mngr.Tests/: ProgramTests.fs  mngr.Tests.fsproj
mngr/src/: config.rs  dependencies.rs  doctor.rs  init.rs  main.rs  reset.rs
monorepo-manager/: Cargo.toml
repo-manager/: Cargo.toml  README.md
scripts/: make-hooks-executable.js
sentinel-web/: pyvenv.cfg
src/: main.rs
the-khadim/: Config.fs  Program.fs  README.md
the-mngr/: Config.fs  Program.fs  tmngr.fsproj
(+197 files in other folders)
