[package]
name = "mngr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0"
serde_json = "1.0"

[[bin]]
name = "mngr"
path = "src/main.rs"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'

[package.metadata.cargo-dist]
output-dir = ".."
